--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "who-am-i",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://pmontu.github.io/who-am-i",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-html5-camera-photo": "^1.5.4",
     "react-scripts": "3.4.1"
   },
   "scripts": {
@@ -30,5 +32,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.0.0"
   }
 }
